--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,11 @@ buildscript {
         maven { url uri(path_plugin) }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20"
+        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20'
 
         //导入插件的依赖
-        classpath 'com.zjh:codecopier:0.0.1'
+        classpath 'com.zjh.plugin:codecopier:0.0.1'
     }
 }
 
